--- a/package.json
+++ b/package.json
@@ -6,20 +6,22 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack",
-    "deploy": "webpack --config webpack.production.config.js",
+    "build": "webpack --config webpack.production.config.js",
     "test": "eslint ./src/**/**.js"
   },
   "license": "MIT",
   "devDependencies": {
+    "@hydrant/eslint-config": "^1.1.1",
     "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.13",
     "browser-sync-webpack-plugin": "^1.2.0",
     "clean-webpack-plugin": "^0.1.17",
-    "eslint": "^4.3.0",
+    "css-loader": "^0.28.7",
+    "eslint": "^4.9.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
@@ -27,10 +29,17 @@
     "eslint-plugin-standard": "^3.0.1",
     "expose-loader": "^0.7.3",
     "html-webpack-plugin": "^2.30.1",
+    "style-loader": "^0.19.0",
     "webpack": "^3.4.1"
   },
   "dependencies": {
     "phaser-ce": "^2.8.3",
     "webfontloader": "^1.6.28"
+  },
+  "eslintConfig": {
+    "extends": "@hydrant/eslint-config/modern",
+    "parserOptions": {
+      "sourceType": "module"
+    }
   }
 }
